; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/rtl8188eu/core/extr_rtw_mlme_ext.c_mlme_evt_hdl.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/rtl8188eu/core/extr_rtw_mlme_ext.c_mlme_evt_hdl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, void (%struct.adapter*, i64*)* }
%struct.adapter = type { i32 }

@MAX_C2HEVT = common dso_local global i64 0, align 8
@_module_rtl871x_cmd_c_ = common dso_local global i32 0, align 4
@_drv_err_ = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [27 x i8] c"\0AEvent Code(%d) mismatch!\0A\00", align 1
@wlanevents = common dso_local global %struct.TYPE_2__* null, align 8
@.str.1 = private unnamed_addr constant [43 x i8] c"\0AEvent(%d) Parm Size mismatch (%d vs %d)!\0A\00", align 1
@H2C_SUCCESS = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @mlme_evt_hdl(%struct.adapter* %0, i8* %1) #0 {
  %3 = alloca %struct.adapter*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32*, align 8
  %8 = alloca void (%struct.adapter*, i64*)*, align 8
  store %struct.adapter* %0, %struct.adapter** %3, align 8
  store i8* %1, i8** %4, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = bitcast i8* %9 to i32*
  store i32* %10, i32** %7, align 8
  %11 = load i32*, i32** %7, align 8
  %12 = load i32, i32* %11, align 4
  %13 = and i32 %12, 65535
  %14 = sext i32 %13 to i64
  store i64 %14, i64* %6, align 8
  %15 = load i32*, i32** %7, align 8
  %16 = load i32, i32* %15, align 4
  %17 = ashr i32 %16, 16
  %18 = and i32 %17, 255
  %19 = sext i32 %18 to i64
  store i64 %19, i64* %5, align 8
  %20 = load i64, i64* %5, align 8
  %21 = load i64, i64* @MAX_C2HEVT, align 8
  %22 = icmp uge i64 %20, %21
  br i1 %22, label %23, label %29

23:                                               ; preds = %2
  %24 = load i32, i32* @_module_rtl871x_cmd_c_, align 4
  %25 = load i32, i32* @_drv_err_, align 4
  %26 = load i64, i64* %5, align 8
  %27 = inttoptr i64 %26 to i8*
  %28 = call i32 @RT_TRACE(i32 %24, i32 %25, i8* %27)
  br label %72

29:                                               ; preds = %2
  %30 = load %struct.TYPE_2__*, %struct.TYPE_2__** @wlanevents, align 8
  %31 = load i64, i64* %5, align 8
  %32 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %30, i64 %31
  %33 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %32, i32 0, i32 0
  %34 = load i64, i64* %33, align 8
  %35 = icmp ne i64 %34, 0
  br i1 %35, label %36, label %56

36:                                               ; preds = %29
  %37 = load %struct.TYPE_2__*, %struct.TYPE_2__** @wlanevents, align 8
  %38 = load i64, i64* %5, align 8
  %39 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %37, i64 %38
  %40 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %39, i32 0, i32 0
  %41 = load i64, i64* %40, align 8
  %42 = load i64, i64* %6, align 8
  %43 = icmp ne i64 %41, %42
  br i1 %43, label %44, label %56

44:                                               ; preds = %36
  %45 = load i32, i32* @_module_rtl871x_cmd_c_, align 4
  %46 = load i32, i32* @_drv_err_, align 4
  %47 = load i64, i64* %5, align 8
  %48 = load %struct.TYPE_2__*, %struct.TYPE_2__** @wlanevents, align 8
  %49 = load i64, i64* %5, align 8
  %50 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %48, i64 %49
  %51 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %50, i32 0, i32 0
  %52 = load i64, i64* %51, align 8
  %53 = load i64, i64* %6, align 8
  %54 = inttoptr i64 %53 to i8*
  %55 = call i32 @RT_TRACE(i32 %45, i32 %46, i8* %54)
  br label %72

56:                                               ; preds = %36, %29
  %57 = load i32*, i32** %7, align 8
  %58 = getelementptr inbounds i32, i32* %57, i64 2
  store i32* %58, i32** %7, align 8
  %59 = load i32*, i32** %7, align 8
  %60 = icmp ne i32* %59, null
  br i1 %60, label %61, label %71

61:                                               ; preds = %56
  %62 = load %struct.TYPE_2__*, %struct.TYPE_2__** @wlanevents, align 8
  %63 = load i64, i64* %5, align 8
  %64 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %62, i64 %63
  %65 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %64, i32 0, i32 1
  %66 = load void (%struct.adapter*, i64*)*, void (%struct.adapter*, i64*)** %65, align 8
  store void (%struct.adapter*, i64*)* %66, void (%struct.adapter*, i64*)** %8, align 8
  %67 = load void (%struct.adapter*, i64*)*, void (%struct.adapter*, i64*)** %8, align 8
  %68 = load %struct.adapter*, %struct.adapter** %3, align 8
  %69 = load i32*, i32** %7, align 8
  %70 = bitcast i32* %69 to i64*
  call void %67(%struct.adapter* %68, i64* %70)
  br label %71

71:                                               ; preds = %61, %56
  br label %72

72:                                               ; preds = %71, %44, %23
  %73 = load i64, i64* @H2C_SUCCESS, align 8
  ret i64 %73
}

declare dso_local i32 @RT_TRACE(i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
